--- a/lista_de_exercícios2_RONALDY.AGUIAR.ipynb
+++ b/lista_de_exercícios2_RONALDY.AGUIAR.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Richardt Justke\n",
+        "Ronaldy Aguiar\n",
         "\n",
         "Turma ciências da computação\n",
         "\n",
